# chateval

./: README.md  pyproject.toml
.github/workflows/: main.yml
chateval/: ]  chateval.py  cli.py  helpers.py  scoring_prompt_template.txt
dc_chat_eval/: chateval.py  helpers.py
tests/: test_chateval.py  test_helpers.py
