[tool.poetry]
name = "dc-chat-eval"
version = "0.1.0"
description = ""
authors = ["davidschober <davidschob@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
selenium = "^4.26.1"
docopt = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
