[project]
authors = [
    {name = "davidschober", email = "david.schober@northwestern.edu"},
]
requires-python = "<4.0,>=3.13"
dependencies = [
    "pandas>=2.2.3,<3.0.0",
    "python-dotenv<2.0.0,>=1.0.1",
    "requests<3.0.0,>=2.32.3",
    "selenium<5.0.0,>=4.26.1",
    "docopt<1.0.0,>=0.6.2",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
    "autopep8>=2.3.2",
]
name = "chateval"
version = "0.2.0"
description = ""
readme = "README.md"

[project.scripts]
chateval = "chateval.chateval:main"

[tool.hatch.build.targets.wheel]
packages = ["chateval"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

