[project]
authors = [
    {name = "davidschober", email = "david.schober@northwestern.edu"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "pandas>=2.2.3,<3.0.0",
    "python-dotenv<2.0.0,>=1.0.1",
    "requests<3.0.0,>=2.32.3",
    "selenium<5.0.0,>=4.26.1",
    "docopt<1.0.0,>=0.6.2",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
    "autopep8>=2.3.2",
    "tqdm>=4.67.1",
    "boto3>=1.36.22",
    "watchdog>=6.0.0",
]
name = "chateval"
version = "0.2.0"
description = ""
readme = "README.md"
urls = {Homepage = "https://github.com/nulib-labs/chateval"}

[project.scripts]
chateval = "chateval.chateval:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chateval"]
include = ["chateval/scoring_prompt_temmplate.txt"]

